<resources>
    <string name="app_name">CalculadoraBasica</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn_suma">+</string>
    <string name="btn_resta">-</string>
    <string name="btn_division">%</string>
    <string name="btn_multiplicacion">x</string>
    <string name="btn_igual">=</string>
    <string name="texto_resultado">Ingrese la operación</string>






</resources>